; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_fsprg.c_gensquare.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_fsprg.c_gensquare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i64, i32, i32)* @gensquare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gensquare(i32 %0, i8* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = load i32, i32* %10, align 4
  %16 = udiv i32 %15, 8
  %17 = zext i32 %16 to i64
  store i64 %17, i64* %11, align 8
  %18 = load i64, i64* %11, align 8
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %12, align 8
  %20 = alloca i32, i64 %18, align 16
  store i64 %18, i64* %13, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @det_randomize(i32* %20, i64 %21, i8* %22, i64 %23, i32 %24)
  %26 = getelementptr inbounds i32, i32* %20, i64 0
  %27 = load i32, i32* %26, align 16
  %28 = and i32 %27, 127
  store i32 %28, i32* %26, align 16
  %29 = load i64, i64* %11, align 8
  %30 = call i32 @mpi_import(i32* %20, i64 %29)
  store i32 %30, i32* %14, align 4
  %31 = load i32, i32* %14, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i64 @gcry_mpi_cmp(i32 %31, i32 %32)
  %34 = icmp slt i64 %33, 0
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  %37 = load i32, i32* %14, align 4
  %38 = load i32, i32* %14, align 4
  %39 = load i32, i32* %14, align 4
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @gcry_mpi_mulm(i32 %37, i32 %38, i32 %39, i32 %40)
  %42 = load i32, i32* %14, align 4
  %43 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %43)
  ret i32 %42
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @det_randomize(i32*, i64, i8*, i64, i32) #2

declare dso_local i32 @mpi_import(i32*, i64) #2

declare dso_local i32 @assert(i32) #2

declare dso_local i64 @gcry_mpi_cmp(i32, i32) #2

declare dso_local i32 @gcry_mpi_mulm(i32, i32, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
